--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".activity.LoginActivity">
 
     <TextView
             android:id="@+id/logoText"
@@ -14,20 +14,20 @@
             android:textSize="32sp"
             android:fontFamily="@font/barlow"
             android:textFontWeight="600"
-            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintVertical_bias="0.4"
             app:layout_constraintEnd_toEndOf="@+id/signInButton"
             app:layout_constraintStart_toStartOf="@+id/signInButton"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/signInButton" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     <com.google.android.gms.common.SignInButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginHorizontal="48dp"
+            android:layout_marginTop="24dp"
             android:id="@+id/signInButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/logoText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
