--- a/app/src/main/res/layout/activity_diary_list.xml
+++ b/app/src/main/res/layout/activity_diary_list.xml
@@ -14,7 +14,7 @@
             app:shapeAppearanceOverlay="@style/circular_avatar_image"
             app:strokeColor="@color/white"
             app:strokeWidth="2dp"
-            android:padding="2dp"
+            android:padding="4dp"
             android:contentDescription="@string/your_avatar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,13 +32,13 @@
             app:layout_constraintTop_toTopOf="@+id/avatarImage"
             app:layout_constraintBottom_toBottomOf="@+id/avatarImage" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
             android:id="@+id/createDiaryButton"
+            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/rounded_add_24"
+            app:icon="@drawable/rounded_add_24"
             android:contentDescription="@string/create_new_diary"
-            android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
