add cards to diary list

--- a/app/src/main/res/layout/activity_create_diary.xml
+++ b/app/src/main/res/layout/activity_create_diary.xml
@@ -14,19 +14,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="12dp"
-            tools:context=".activity.CreateDiaryActivity">
+            tools:context=".ui.activity.CreateDiaryActivity">
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
                 android:id="@+id/backButton"
+                style="@style/Widget.Material3.Button.IconButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/rounded_arrow_back_24"
+                app:icon="@drawable/rounded_arrow_back_24"
                 android:contentDescription="@string/go_back"
-                android:background="@android:color/transparent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/create_new_diary"
