--- a/app/src/main/res/layout/activity_diary_list.xml
+++ b/app/src/main/res/layout/activity_diary_list.xml
@@ -4,13 +4,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="24dp"
-        tools:context=".activity.DiaryListActivity">
+        tools:context=".ui.activity.DiaryListActivity">
 
     <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/avatarImage"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:layout_margin="24dp"
             app:shapeAppearanceOverlay="@style/circular_avatar_image"
             app:strokeColor="@color/white"
             app:strokeWidth="2dp"
@@ -19,7 +19,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
             android:id="@+id/appLogoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,24 +37,20 @@
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:layout_margin="24dp"
             app:icon="@drawable/rounded_add_24"
             android:contentDescription="@string/create_new_diary"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-    <HorizontalScrollView
+    <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/diaryPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appLogoText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-        <LinearLayout
-                android:id="@+id/diaryList"
-                android:layout_width="wrap_content"
-                android:layout_height="480dp"
-                android:orientation="horizontal" />
-    </HorizontalScrollView>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
