--- a/app/src/main/res/layout/activity_diary_details.xml
+++ b/app/src/main/res/layout/activity_diary_details.xml
@@ -17,11 +17,21 @@
             android:layout_height="match_parent"
             tools:context=".ui.diary.details.DiaryDetailsActivity">
 
-        <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/mainPager"
+        <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.Material3.CardView.Outlined"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}" />
+                android:layout_height="0dp"
+                android:layout_marginTop="24dp"
+                android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/backButton">
+
+            <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/mainPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/backButton"
@@ -40,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{viewModel.diary.name}"
-                android:fontFamily="@font/dm_serif_display"
+                android:fontFamily="@font/dm_sans"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
