--- a/app/src/main/res/layout/fragment_diary_card.xml
+++ b/app/src/main/res/layout/fragment_diary_card.xml
@@ -9,8 +9,9 @@
     <com.google.android.material.card.MaterialCardView
             style="@style/Widget.Material3.CardView.Outlined"
             android:layout_width="match_parent"
-            android:layout_height="480dp"
-            android:layout_margin="24dp">
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginVertical="48dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
