--- a/app/src/main/res/layout/fragment_snap_card.xml
+++ b/app/src/main/res/layout/fragment_snap_card.xml
@@ -6,16 +6,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:padding="8dp"
+        android:background="@drawable/snap_cell_shape"
         tools:context=".ui.diary.details.snaps.SnapCardFragment">
 
-    <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/dateText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/dm_serif_display"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <Space
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            app:layout_constraintBottom_toTopOf="@id/dayText" />
 
     <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dayText"
@@ -23,8 +20,17 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/dm_sans_medium"
-            android:textSize="24sp"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/dateText" />
+
+    <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/dateText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dm_serif_display"
+            android:textSize="32sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
