--- a/app/src/main/res/layout/fragment_snap_camera.xml
+++ b/app/src/main/res/layout/fragment_snap_camera.xml
@@ -40,4 +40,14 @@
             app:layout_constraintStart_toEndOf="@+id/captureButton"
             app:layout_constraintBottom_toBottomOf="@+id/captureButton"
             app:layout_constraintTop_toTopOf="@+id/captureButton" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/captureProgressIndicator"
+            style="@style/Widget.Material3.CircularProgressIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/captureButton"
+            app:layout_constraintEnd_toEndOf="@+id/captureButton"
+            app:layout_constraintStart_toStartOf="@+id/captureButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
