add snap inspect fragment for upload

--- a/app/src/main/res/layout/fragment_snap_camera.xml
+++ b/app/src/main/res/layout/fragment_snap_camera.xml
@@ -47,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="24dp"
+            android:progress="100"
             app:layout_constraintBottom_toTopOf="@+id/captureButton"
             app:layout_constraintEnd_toEndOf="@+id/captureButton"
             app:layout_constraintStart_toStartOf="@+id/captureButton" />
