--- a/app/src/main/res/layout/activity_create_snap.xml
+++ b/app/src/main/res/layout/activity_create_snap.xml
@@ -7,7 +7,7 @@
         tools:context=".ui.diary.details.snaps.create.CreateSnapActivity">
 
     <FrameLayout
-            android:id="@+id/cameraFragmentContainer"
+            android:id="@+id/contentFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
