--- a/app/src/main/res/layout/fragment_snap_card.xml
+++ b/app/src/main/res/layout/fragment_snap_card.xml
@@ -5,20 +5,26 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:padding="8dp"
         android:background="@drawable/snap_cell_shape"
         tools:context=".ui.diary.details.snaps.SnapCardFragment">
 
-    <Space
+    <ImageView
+            android:id="@+id/thumbnailImage"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            app:layout_constraintBottom_toTopOf="@id/dayText" />
+            android:layout_height="140dp"
+            android:importantForAccessibility="no"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dayText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
+            android:layout_marginHorizontal="8dp"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +34,8 @@
             android:id="@+id/dateText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="@font/dm_serif_display"
             android:textSize="32sp"
             app:layout_constraintBottom_toBottomOf="parent"
