--- a/app/src/main/res/layout/activity_diary_details.xml
+++ b/app/src/main/res/layout/activity_diary_details.xml
@@ -23,8 +23,8 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
                 android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/backButton">
+                app:layout_constraintTop_toBottomOf="@+id/backButton"
+                app:layout_constraintBottom_toBottomOf="parent">
 
             <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/mainPager"
