change diary card style

--- a/app/src/main/res/layout/fragment_diary_card.xml
+++ b/app/src/main/res/layout/fragment_diary_card.xml
@@ -7,7 +7,7 @@
         tools:context=".ui.diary.list.DiaryCardFragment">
 
     <com.google.android.material.card.MaterialCardView
-            style="@style/Widget.Material3.CardView.Outlined"
+            style="@style/Widget.Material3.CardView.Elevated"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="24dp"
@@ -15,17 +15,24 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="48dp">
+                android:layout_height="match_parent">
+
+            <ImageView
+                    android:id="@+id/backgroundImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:importantForAccessibility="no"
+                    android:scaleType="centerCrop" />
 
             <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/nameText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="48dp"
                     android:fontFamily="@font/dm_serif_display"
                     android:textSize="36sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:id="@+id/nameText" />
+                    app:layout_constraintBottom_toBottomOf="parent" />
 
             <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/descriptionText"
@@ -34,15 +41,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/dm_sans"
                     app:layout_constraintStart_toStartOf="@+id/nameText"
-                    app:layout_constraintTop_toBottomOf="@+id/nameText" />
-
-            <com.google.android.material.button.MaterialButton
-                    android:id="@+id/openButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/open"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintBottom_toTopOf="@+id/nameText" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
