--- a/app/src/main/res/layout/card_diary_day.xml
+++ b/app/src/main/res/layout/card_diary_day.xml
@@ -9,9 +9,10 @@
     <ImageView
             android:id="@+id/diaryDayThumbnailImage"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="0dp"
             android:importantForAccessibility="no"
             android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
