--- a/app/src/main/res/layout/fragment_snap_inspector.xml
+++ b/app/src/main/res/layout/fragment_snap_inspector.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
-        tools:context=".ui.diary.details.snaps.create.SnapInspectorFragment">
+        tools:context=".snap.ui.create.SnapInspectorFragment">
 
     <VideoView
             android:id="@+id/mediaPreview"
