--- a/app/src/main/res/layout/activity_diary_list.xml
+++ b/app/src/main/res/layout/activity_diary_list.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.diary.list.DiaryListActivity">
+        tools:context=".diary.ui.list.DiaryListActivity">
 
     <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/avatarImage"
