--- a/app/src/main/res/layout/fragment_snap_camera.xml
+++ b/app/src/main/res/layout/fragment_snap_camera.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.diary.details.snaps.create.SnapCameraFragment">
+        tools:context=".snap.ui.create.SnapCameraFragment">
 
     <FrameLayout
             android:layout_width="match_parent"
