--- a/app/src/main/res/layout/activity_diary_details.xml
+++ b/app/src/main/res/layout/activity_diary_details.xml
@@ -22,7 +22,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}"
                 app:layout_constraintTop_toBottomOf="@+id/backButton"
                 app:layout_constraintBottom_toBottomOf="parent">
 
@@ -42,8 +41,7 @@
                 app:icon="@drawable/rounded_arrow_back_24"
                 android:contentDescription="@string/go_back"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}" />
+                app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/titleText"
@@ -55,17 +53,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/backButton"
-                app:layout_constraintBottom_toBottomOf="@+id/backButton"
-                android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}" />
-
-        <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}" />
+                app:layout_constraintBottom_toBottomOf="@+id/backButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
